--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.4.4",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "vant": "^2.4.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
@@ -19,6 +20,7 @@
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
@@ -32,7 +34,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
